<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventApp</string>

    <string name="mk_stages">STAGES</string>
    <string name="mk_food">FOOD &amp; BEVERAGES</string>
    <string name="mk_info">INFO</string>
    <string name="mk_map">MAP</string>
    <string name="mk_artists">ARTISTS</string>
    <string name="mk_games">ACTIVITIES</string>

    <string name="menu_bottom_name1">NOW</string>
    <string name="menu_bottom_name2">NEXT</string>
    <string name="menu_bottom_title">NEXT ON STAGE</string>

    <string name="toast_start">Reminder is set 10 minutes before the artist show</string>
    <string name="toast_cancel">Reminder is cancelled</string>
    <string name="toast_warning">Please install google play service</string>
    <string name="noCon">No connection</string>
    <string name="after10">After 10 minutes</string>
    <string name="welcomeMessage">ItWorks welcomes you to our event application. This is a prototype of a generic festival or event app. Here you can explore some of the possible things that are available in an event application! If interested, contacts us at hi@itworksmobile.com</string>
    <string name="preference_home">HOME</string>
    <string name="homeButton">HOME_BUTTON</string>
    <string name="menu_bottom_text_small">NOW ON STAGE</string>
    <string name="Legend">Legend</string>


    <string-array name="tabs_names">
        <item >Stage one</item>
        <item >Stage two</item>
    </string-array>

    <string-array name="info_list_names">
        <item >What do we offer?</item>
        <item >About ItWorks</item>
        <item >How to arrive</item>
        <item>One more…</item>
    </string-array>

</resources>
