<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/menu_background">

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:id="@+id/space1"
                />
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/menu_background_logo"/>

        <ImageView
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/button_height"
                android:paddingLeft="@dimen/button_height"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/space1"
                android:layout_above="@+id/space2"
                android:id="@+id/logo"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/firstLine"
                android:id="@+id/space2"
                />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/menu_button_margins"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/space3"
                android:id="@+id/firstLine">
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/map_background"
                        android:id="@+id/button4">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                android:text="@string/mk_map"
                            android:id="@+id/b1t" />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="@dimen/menu_button_margins"
                        android:layout_marginBottom="@dimen/menu_button_margins"
                        android:background="@drawable/stages_background"
                        android:id="@+id/button2">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                  android:text="@string/mk_stages"
                            android:id="@+id/b2t" />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/artists_background"
                        android:id="@+id/button">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                  android:text="@string/mk_artists"
                            android:id="@+id/b3t" />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="@dimen/menu_button_margins"
                        android:layout_marginBottom="@dimen/menu_button_margins"
                        android:background="@drawable/sport_background"
                        android:id="@+id/button6">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                  android:text="@string/mk_games"
                            android:id="@+id/b4t" />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/food_background"
                        android:id="@+id/button3">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                  android:text="@string/mk_food"
                            android:id="@+id/b5t" />
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginTop="@dimen/menu_button_margins"
                        android:background="@drawable/info_background"
                        android:id="@+id/button5">
                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:textStyle="bold"
                                  android:textColor="@color/blue_black"
                                  android:textSize="@dimen/menu_text_size"
                                  android:layout_centerInParent="true"
                                  android:text="@string/mk_info"
                            android:id="@+id/b6t" />
                </RelativeLayout>

        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/bottomLine"
                android:id="@+id/space3"
                />
        <FrameLayout android:layout_width="@dimen/button_width"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_alignParentBottom="true"
                  android:id="@+id/bottomLine"/>

</RelativeLayout>